# ds-assignment2

./: (N-N)-AtomicRegister.txt  .gitignore  README.md
public-tests/: Cargo.toml
public-tests/tests/: atomic_register.rs  system.rs  transfer.rs
solution/src/: atomic_register.rs  domain.rs  lib.rs  register_client.rs  register_process.rs  sectors_manager.rs  stable_storage.rs  transfer_operations.rs  utils.rs
test-utils/: Cargo.toml
